[HTMLIZ-6] Fixed spacing or table converstaion and added blue line.

--- a/level0-A/lesson-01/main.scss
+++ b/level0-A/lesson-01/main.scss
@@ -881,11 +881,11 @@ td {
       font-family: $noto-sans;
       font-weight: normal;
       font-size: clamp(12px, 3.5vw, 18px);
-      margin-bottom: 5px;
+      margin-bottom: clamp(2px, 1vw, 5px);
     }
     .jap {
       font-size: clamp(9px, 2vw, 13px);
-      margin-bottom: 12px;
+      margin-bottom: clamp(8px, 3vw, 12px);
     }
   }
 }
